<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestCar</string>
    <string name="deviceName">HC-06</string>
    <string name="connectButton">Connect</string>
    <string name="buttonFL">Forward-L</string>
    <string name="buttonF">Forward</string>
    <string name="buttonFR">Forward-R</string>
    <string name="buttonL">Left</string>
    <string name="buttonRecord">Start Recording</string>
    <string name="buttonR">Right</string>
    <string name="buttonBL">Backward-L</string>
    <string name="buttonB">Backward</string>
    <string name="buttonBR">Backward-R</string>
    <string name="EnLineTracking">Enable Tracking</string>
    <string name="DisLineTracking">Disable Tracking</string>
    <string name="buttonTrack">Start Track</string>
    <string name="title_activity_buttons">Buttons</string>
    <string name="title_activity_accelerometer">Accelerometer</string>
    <string name="action_full_control">Full Control</string>


</resources>