<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eg.edu.asu.eng.walle.testcar.MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/connectButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:onClick="connect"
            android:text="@string/connectButton"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/buttonFL"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:onClick="sendFL"
                android:text="@string/buttonFL"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/buttonF"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:onClick="sendF"
                android:text="@string/buttonF"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/buttonFR"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:onClick="sendFR"
                android:text="@string/buttonFR"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/buttonL"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:onClick="sendL"
                android:text="@string/buttonL"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/buttonS"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:onClick="sendS"
                android:text="@string/buttonS"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/buttonR"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:onClick="sendR"
                android:text="@string/buttonR"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/buttonBL"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:onClick="sendBL"
                android:text="@string/buttonBL"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/buttonB"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:onClick="sendB"
                android:text="@string/buttonB"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/buttonBR"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:onClick="sendBR"
                android:text="@string/buttonBR"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>